Some iOS (crap OS!) specific fixes and prevent horizontal scroll on window object

--- a/Web/htdocs/gui/css/style.css
+++ b/Web/htdocs/gui/css/style.css
@@ -1,8 +1,3 @@
-html {
-   overflow: hidden;
-   overflow-y: auto;
-   width:100%;
-}
 
 .alert-container {
    position: fixed;
